# pluginframework

./: .gitignore  AUTHORS  Makefile.am  README  configure.ac  libcpluginmanager.pc.in  libcpluginmanager.spec.in  pluginframework.pc.in  pluginframework.spec.in
examples/: example_calc.c
examples/calc_plugins/: calc_manager.c  calc_manager.h  plugin-calc-add.c  plugin-calc-multiply.c
include/: PluginManager.hpp  cpluginmanager.h  pluginframework.h
include/cpluginmanager/: plugins.h
include/cpluginmanager/traits/: Manager.hpp  common.hpp
include/cpluginmanager/types/: PluginDetails.h
include/pluginframework/: Controller.hpp  plugins.h
include/pluginframework/traits/: Manager.hpp  common.hpp
include/pluginframework/types/: PluginDetails.h
src/: Controller.cpp  PluginManager.cpp  cpluginmanager.cpp  pluginframework.cpp  plugins.cpp
tests/: Makefile.am  test-Controller.cpp  test-PluginManager.cpp
